Refactor footer styles; update background colors, adjust text colors, and remove unnecessary elements for improved design

--- a/frontend/src/assets/styles/global.css
+++ b/frontend/src/assets/styles/global.css
@@ -5,11 +5,11 @@
   Colour palette
   */
   --blue-vibrant: #3d55cc;
-  --blue-vibrant-baby: #3e5efe;
   --dark-grey: #141a33;
   --grey: #505673;
+  --grey2: #878CA8;
   --light-grey: #dadef2;
-  --light-grey2: #f5f6fa;
+  --light-blue-grey2: #f5f6fa;
   --white: #FFFFFF;
   --black: #0A0F1E;
 
