--- a/frontend/src/pages/Contact/Contact.css
+++ b/frontend/src/pages/Contact/Contact.css
@@ -12,20 +12,24 @@
   min-width: 300px;
 }
 .title-contact-us {
-  font-size: 64px;
-  font-weight: 600;
-  color: var(--white);
+  font-size: 36px;
+  font-weight: 700;
+  color: var(--blue-vibrant);
   padding-bottom: 3.5%;
-  line-height: 1.2em;
+  letter-spacing: -0.2px;
+  line-height: 1.2;
   margin-top: 0;
   margin-bottom: 18px;
 }
 .intro-contact-txt, .support-txt, 
 .github-icon-container, .open-source-github-txt,
 .contribute-subtitle {
-  color: #a6acb8;
-  font-size: 13.5px;
-  width: 99%;
+  color: var(--grey);
+  font-size: 18px;
+  font-weight: 400;
+  letter-spacing: 0px;
+  line-height: 1.6;
+  max-width: 600px;
 }
 .support-txt {
   left: 0;
@@ -34,35 +38,39 @@
 .technical-support-txt,
 .suggestions-feedback-txt,
 .report-problem-txt {
-  font-weight: bold;
-  line-height: 1.6;
-  color: var(--white);
-  font-size: 14px;
+  font-weight: 700;
+  line-height: 1.5;
+  color: var(--dark-grey);
+  font-size: 18px;
+  letter-spacing: 0px;
+  max-width: 600px;
+}
+.container-github-bnt {
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  justify-content: flex-start;
 }
 .github-link {
   display: flex;
-  align-items: center;
   text-decoration: none;
   color: inherit;
-  transition: transform .3s;
+  transition: transform .3s ease-in-out;
 }
-.github-link:hover,
-.github-link:focus {
+.github-link:hover {
   text-decoration: none;
-  color: inherit;
-  opacity: 90%;
+  color: var(--blue-vibrant);
   transform: scale(0.95);
 }
 .github-space {
   display: flex;
   align-items: center;
-  gap: 14px;
   padding-top: 8%;
 }
 .github-icon-container {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   background-color: var(--blue-vibrant);
   border-radius: 50%;
   padding: 10px;
@@ -80,7 +88,12 @@
 }
 .open-github, .contribute-subtitle {
   text-decoration: none;
-  color: var(--white);
+  color: var(--dark-grey);
+  font-weight: 600;
+  font-size: 16px;
+  letter-spacing: 1px;
+  line-height: 1.2;
+  padding: 12px 24px;
 }
 
 /*Form */
@@ -88,7 +101,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  background-color: #1d263b;
+  background-color: var(--light-blue-grey2);
   border-radius: 24px;
   margin-top: 4.4%;
   gap: 12px;
@@ -111,10 +124,10 @@
   font-size: 12px;
   margin-top: 2.5%;
   border-radius: 30px;
-  color: var(--white);
-  background-color: rgba(255, 255, 255, .1);
-  border: 1px solid rgba(255, 255, 255, .2);
-  height: 64px;
+  color: var(--dark-grey);
+  background-color: var(--white); 
+  border: 1px solid var(--grey2);
+  height: 54px;
   padding: 20px;
 }
 .container-message {
@@ -126,7 +139,7 @@
 .title-name {
   margin-top: 3.5%;
   font-size: 14px;
-  color: var(--white);
+  color: var(--dark-grey);
 }
 .container-message textarea.input-message {
   width: 100%;
@@ -137,9 +150,9 @@
   margin-top: 2.5%;
   padding: 20px;
   border-radius: 10px;
-  color: var(--white);
-  background-color: rgba(255, 255, 255, .1);
-  
+  color: var(--dark-grey);
+  background-color: var(--white); 
+  border: 1px solid var(--grey2); 
 }
 textarea.input-message:focus,
 textarea.input-message:hover,
@@ -161,30 +174,31 @@ input.input-subject:hover {
 .container-email input.input-email::placeholder,
 .container-phone input.input-phone::placeholder,
 .container-subject input.input-subject::placeholder {
-   color: rgba(255, 255, 255, 0.566);
+  color: var(--grey);
 }
 .container-message textarea.input-message::-moz-placeholder,
 .container-name input.input-name::-moz-placeholder, 
 .container-email input.input-email::-moz-placeholder,
 .container-phone input.input-phone::-moz-placeholder,
 .container-subject input.input-subject::-moz-placeholder {
-  color: var(--white);
+  color: var(--grey);
 }
 .container-message textarea.input-message:-ms-input-placeholder,
 .container-name input.input-name:-ms-input-placeholder, 
 .container-email input.input-email:-ms-input-placeholder,
 .container-phone input.input-phone:-ms-input-placeholder,
 .container-subject input.input-subject:-ms-input-placeholder {
-  color: var(--white);
+  color: var(--grey);
 }
 .container-message textarea.input-message::-ms-input-placeholder,
 .container-name input.input-name::-ms-input-placeholder, 
 .container-email input.input-email::-ms-input-placeholder,
 .container-phone input.input-phone::-ms-input-placeholder,
 .container-subject input.input-subject::-ms-input-placeholder {
-  color: var(--white);
+  color: var(--grey);
 }
 
+/* Bnt */
 #button_id{
   justify-self: start;
 }
@@ -199,17 +213,15 @@ input.send-message-bnt {
   line-height: 20px;
   background-color: var(--blue-vibrant);
   color: var(--white);
-  border: none;
+  border: 2px solid var(--blue-vibrant);
   cursor: pointer;
   padding: 0px 40px;
   transform-style: preserve-3d;
-  transition: all .3s ease-in-out;
   margin-left: 0;
 }
 input.send-message-bnt:hover {
-  background-color: rgba(255, 255, 255, 0.566);
-  transform: scale(0.95);
-  box-shadow: 0px 4px 10px rgba(0, 0, 0, .2);
+  background-color: var(--grey);
+  border: 2px solid var(--grey2);
 }
 input.send-message-bnt:active {
   transform: scale(0.95);
