--- a/frontend/src/pages/Contact/Contact.css
+++ b/frontend/src/pages/Contact/Contact.css
@@ -12,7 +12,7 @@
   min-width: 300px;
 }
 .title-contact-us {
-  font-size: 36px;
+  font-size: 40px;
   font-weight: 700;
   color: var(--blue-vibrant);
   padding-bottom: 3.5%;
@@ -29,7 +29,7 @@
   font-weight: 400;
   letter-spacing: 0px;
   line-height: 1.6;
-  max-width: 600px;
+  max-width: 650px;
 }
 .support-txt {
   left: 0;
@@ -55,12 +55,13 @@
   display: flex;
   text-decoration: none;
   color: inherit;
-  transition: transform .3s ease-in-out;
 }
 .github-link:hover {
   text-decoration: none;
   color: var(--blue-vibrant);
-  transform: scale(0.95);
+  transform: scale(1.05);
+  opacity: 0.9;
+  transition: transform .2s ease-in-out;
 }
 .github-space {
   display: flex;
@@ -126,7 +127,7 @@
   border-radius: 30px;
   color: var(--dark-grey);
   background-color: var(--white); 
-  border: 1px solid var(--grey2);
+  border: 1.5px solid var(--grey2);
   height: 54px;
   padding: 20px;
 }
@@ -152,7 +153,7 @@
   border-radius: 10px;
   color: var(--dark-grey);
   background-color: var(--white); 
-  border: 1px solid var(--grey2); 
+  border: 1.5px solid var(--grey2); 
 }
 textarea.input-message:focus,
 textarea.input-message:hover,
@@ -220,10 +221,8 @@ input.send-message-bnt {
   margin-left: 0;
 }
 input.send-message-bnt:hover {
-  background-color: var(--grey);
-  border: 2px solid var(--grey2);
-}
-input.send-message-bnt:active {
+  background-color: #3d55cc;
+  opacity: 0.9;
+  border: 2px solid var(--blue-vibrant);
   transform: scale(0.95);
-  box-shadow: 0px 2px 5px rgba(0, 0, 0, .15);
 }
