--- a/frontend/src/components/Button/buttonCTA.css
+++ b/frontend/src/components/Button/buttonCTA.css
@@ -6,34 +6,22 @@
 }
 .cta-btn {
   cursor: pointer;
-  width: 20%;
-  border-radius: 4px;
+  border-radius: 10px;
   background-color: var(--blue-vibrant);
-  border: 2px solid var(--blue-vibrant);
-  box-sizing: border-box;
-  height: 54px;
-  padding: 12px 24px;
-  font-size: 16px;
-  letter-spacing: 0.19em;
-  line-height: 1.2;
+  border: none;
+  padding: 16px 28px;
+  font-size: 18px;
   font-weight: bold;
   color: var(--white);
+  transition: all .3s ease-in-out;
   box-shadow: 
-  0 3px 1px -2px rgba(0, 0, 0, 0.12),
-  0 3px 2px -2px rgba(0, 0, 0, 0.12),
-  0 3px 1px -2px rgba(0, 0, 0, 0.12);
+  0 4px 10px rgba(61, 85, 204, 0.3),
 }
 .cta-btn:hover {
-  background-color: var(--blue-vibrant);
-  border-radius: 4px;
+  transform: scale(1.05);
+  background-color: #2b3ea1;
   box-shadow: 
-  0 4px 6px rgba(0, 0, 0, 0.1),
-  0 4px 6px rgba(0, 0, 0, 0.1),
-  0 4px 6px rgba(0, 0, 0, 0.1);
-}
-.cta-btn:active {
-  background-color: var(--blue-vibrant);
-  transform: scale(0.98);
+  0 6px 12px rgba(61, 85, 204, 0.4),
 }
 
 /*
