--- a/frontend/src/pages/Home/Home.css
+++ b/frontend/src/pages/Home/Home.css
@@ -35,23 +35,31 @@
 }
 
 h1 {
-  margin: var(--reset-space);;
-  font-size: 3rem;
-  line-height: 1.2;
   font-weight: 400;
-  color: var(--dark-grey);
 }
-.featured-title {
-  font-weight: bold;
+.home-tilte1 {
+  font-weight: 800;
+  font-size: 48px;
+  letter-spacing: -0.2px;
+  line-height: 1.3;
   color: var(--dark-grey);
+  margin: var(--reset-space);
+}
+.home-tilte2 {
+  font-weight: 800;
+  font-size: 48px;
+  letter-spacing: -0.2px;
+  line-height: 1.3;
+  color: var(--blue-vibrant);
+  margin: var(--reset-space);
 }
 .subtitle {
+  font-weight: 500;
   margin: var(--reset-space);
-  font-size: 1.125rem;
-  line-height: 1.6;
-  letter-spacing: 0.05em;
-  font-weight: 400;
-  color: var(--dark-grey);
+  font-size: 24px;
+  letter-spacing: -0.2px;
+  line-height: 1.3;
+  color: var(--grey);
 }
 
 /*Other sections*/
