--- a/frontend/src/pages/Therms/Therms.css
+++ b/frontend/src/pages/Therms/Therms.css
@@ -1,12 +1,11 @@
-.therms-section {
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
-  margin: 0;
-}
-
 main {
+  min-height: 100vh;
+  width: 100%;
+  padding-left: var(--global-margin-left);
+  padding-right: var(--global-margin-right);
+  margin: 0 auto;
   flex: 1;
+  box-sizing: border-box;
 }
 
 ul.titles {
