--- a/frontend/src/pages/Terms/Terms.css
+++ b/frontend/src/pages/Terms/Terms.css
@@ -7,6 +7,38 @@ main {
   flex: 1;
   box-sizing: border-box;
 }
+.terms-container {
+  max-width: 900px;
+  margin: 0 auto;
+  padding: 40px;
+  font-family: "Satoshi", sans-serif;
+}
+h1 {
+  font-size: 48px;
+  font-weight: 800;
+  color: var(--dark-grey);
+  text-align: center;
+}
+h2 {
+  font-size: 28px;
+  font-weight: 700;
+  color: var(--blue-vibrant);
+  margin-top: 40px;
+  margin-bottom: 16px;
+}
+ul li {
+  font-size: 18px;
+  line-height: 1.8;
+  font-weight: 800;
+  color: var(--grey2);
+  margin-bottom: 16px;
+  margin-top: 16px;
+}
+ul div {
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 1.8;
+}
 
 ul.titles {
  list-style: none;
