--- a/frontend/src/pages/Terms/Terms.css
+++ b/frontend/src/pages/Terms/Terms.css
@@ -1,4 +1,4 @@
-main {
+.terms-main {
   min-height: 100vh;
   width: 100%;
   padding-left: var(--global-margin-left);
@@ -18,7 +18,7 @@ main {
   font-weight: 800;
   color: var(--dark-grey);
   text-align: center;
-  margin-bottom: 20px;
+  margin-bottom: 50px;
 }
 .subtitle-terms-section {
   font-size: 28px;
