Enhance ScrollToTopButton and CookiesBanner; adjust styles and integrate cookie consent functionality

--- a/frontend/src/components/Button/ScrollToTopButton/ScrollToTopButton.css
+++ b/frontend/src/components/Button/ScrollToTopButton/ScrollToTopButton.css
@@ -1,8 +1,9 @@
 .scroll-to-top {
   position: fixed;
-  bottom: 20px;
   right: 20px;
-  background: var(--blue-vibrant);
+  width: 50px;
+  height: 50px;
+  background-color: var(--blue-vibrant);
   color: var(--white);
   border: none;
   padding: 10px;
