--- a/frontend/src/components/Button/buttonConvert.css
+++ b/frontend/src/components/Button/buttonConvert.css
@@ -39,7 +39,7 @@
   font-weight: bold;
   color: var(--white);
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.12);
-  transition: all .3s ease-in-out;
+  transition: .3s;
   z-index: 2;
 }
 .bnt:hover {
@@ -98,13 +98,56 @@
   color: #721c24;
 }
 
+.result-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  background: #f3f3f3;
+  padding: 20px;
+  border-radius: 12px;
+  margin-top: 15px;
+  gap: 19px;
+}
+.download-btn {
+  display: inline-block;
+  margin-top: 8px;
+  padding: 10px 20px;
+  background-color: var(--blue-vibrant);
+  color: var(--white);
+  border-radius: 8px;
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 16px;
+  transition: .3s;
+  cursor: pointer;
+}
+.download-btn:hover {
+  background-color: #0300ca;
+  transform: scale(1.05);
+}
+.convert-next-btn {
+  margin-top: 10px;
+  background-color: #ccc;
+  color: var(--black);
+  border: 1px solid #ccc;
+  padding: 10px 15px;
+  font-size: 14px;
+  border-radius: 8px;
+  cursor: pointer;
+  transition: .3s;
+}
+.convert-next-btn:hover {
+  background-color: #ddd;
+  transform: scale(1.05);
+}
+
 .download-container {
   display: flex;
   flex-direction: column;
   align-items: center;
   margin-top: 105px;
   text-align: center;
- 
 }
 
 .bnt:disabled {
@@ -121,19 +164,4 @@
   margin-top: 12px;
   color: #dc3545;
   font-weight: bold;
-}
-.download-btn {
-  display: inline-block;
-  margin-top: 8px;
-  padding: 12px 18px;
-  background-color: #007bff;
-  color: var(--white);
-  border-radius: 8px;
-  text-decoration: none;
-  font-weight: bold;
-  transition: all .3s ease-in-out;
-}
-.download-btn:hover {
-  background-color: #0056b3;
-  transform: scale(1.05);
 }
