--- a/frontend/src/components/Button/buttonConvert.css
+++ b/frontend/src/components/Button/buttonConvert.css
@@ -18,7 +18,7 @@
 #input-link:focus {
   outline: none;
   border: 2px solid var(--blue-vibrant);
-  box-shadow: 0 0 10px rgba(61, 84, 204, 0.4);;
+  box-shadow: 0 0 10px rgba(61, 84, 204, 0.4);
 }
 .bnt {
   position: absolute;
@@ -100,18 +100,16 @@
 
 .result-container {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
   align-items: center;
   text-align: center;
-  background: #f3f3f3;
+  background: var(--light-blue-grey2);
   padding: 20px;
   border-radius: 12px;
   margin-top: 15px;
-  gap: 19px;
 }
 .download-btn {
   display: inline-block;
-  margin-top: 8px;
   padding: 10px 20px;
   background-color: var(--blue-vibrant);
   color: var(--white);
@@ -127,7 +125,6 @@
   transform: scale(1.05);
 }
 .convert-next-btn {
-  margin-top: 10px;
   background-color: #ccc;
   color: var(--black);
   border: 1px solid #ccc;
@@ -141,24 +138,42 @@
   background-color: #ddd;
   transform: scale(1.05);
 }
-
-.download-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin-top: 105px;
+.video-title {
+  margin-bottom: 10px;
+  font-size: 18px;
+  font-weight: bold;
+  color: #333;
   text-align: center;
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+.video-title::before {
+  content: "🎵";
+  font-size: 20px;
+}
+.result-content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 15px;
+  margin-top: 10px;
+}
+.success-message-convert {
+  color: #28a745;
+  font-weight: bold;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  gap: 5px;
+  letter-spacing: 0.5px;
 }
 
 .bnt:disabled {
   background-color: #ccc;
   cursor: not-allowed;
   opacity: 0.7;
-}
-.success-message-convert {
-  margin-top: 16px;
-  color: #28a745;
-  font-weight: bold;
 }
 .error-message-convert {
   margin-top: 12px;
