--- a/frontend/src/components/Button/buttonConvert.css
+++ b/frontend/src/components/Button/buttonConvert.css
@@ -32,7 +32,7 @@
   box-sizing: border-box;
   cursor: pointer;
   height: 50px;
-  width: 22%;
+  width: 25%;
   font-size: 16px;
   letter-spacing: 0.19em;
   line-height: 1.2;
@@ -173,7 +173,11 @@
 .bnt:disabled {
   background-color: #ccc;
   cursor: not-allowed;
-  opacity: 0.7;
+  height: 50.5px;
+  width: 25%;
+  border-radius: 25px;
+  color: var(--dark-grey);
+  border: 2px solid #999999;
 }
 .error-message-convert {
   margin-top: 12px;
