--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -30,7 +30,7 @@ header {
   justify-content: space-between;
   z-index: 1000;
   align-items: center;
-  background-color: #fff;
+  background-color: var(--white);
 }
 header.hidden {
   top: -70px;
@@ -144,4 +144,92 @@ header.hidden {
   width: 100%;
 }
 
+.nav-bar ul {
+  display: flex;
+  list-style: none;
+  gap: var(--space-m);
+}
+.hamburguer-menu {
+  display: none;
+  cursor: pointer;
+}
+.hamburguer-menu span {
+  display: block;
+  width: 30px;
+  height: 3px;
+  margin: 6px auto;
+  background-color: var(--dark-grey);
+  transition: .3s;
+}
 
+
+/* 📌 Responsividade | Responsiveness */
+@media (max-width: 991px) {
+  .nav-bar {
+    display: none;
+  }
+
+  .hamburguer-menu {
+    display: block;
+  }
+
+  .nav-bar.active {
+    display: block;
+    flex-direction: column;
+    position: absolute;
+    top: 70px;
+    right: 0;
+    width: 200px;
+    background-color: var(--white);
+    box-shadow: 0 4px 10px rgba(0, 0, 0, .1);
+    padding: var(--space-s);
+  }
+
+  .nav-list {
+    flex-direction: column;
+    gap: var(--space-s);
+    padding: 10px;
+  }
+
+  .slogan {
+    font-weight: 500;
+    font-size: 10px;
+    letter-spacing: 0.5px;
+    line-height: 1.4;
+    margin: 0;
+    text-align: left;
+    align-items: flex-start;
+    color: var(--dark-grey);
+  }
+
+  .logo .vibra {
+    font-size: 18px;
+    font-weight: 900;
+    margin: 0;
+    letter-spacing: 0.22em;
+    align-items: center;
+    display: inline-block;
+    line-height: 1;
+    color: var(--dark-grey);
+  }
+  .logo .liste {
+    font-weight: 400;
+    font-size: 18px;
+    margin: 0;
+    letter-spacing: 0.22em;
+    align-items: center;
+    display: inline-block;
+    line-height: 1;
+    color: var(--dark-grey);
+  }
+
+  .logo-image {
+    width: 52px;
+    height: 52px;
+    margin: 0;
+  }
+
+  .logo-container a {
+    gap: 5pt;
+  }
+}
