--- a/frontend/src/components/Button/buttonConvert.css
+++ b/frontend/src/components/Button/buttonConvert.css
@@ -298,5 +298,65 @@
 
 /* Mobile (≤480px) */
 @media (max-width: 480px) { 
- 
+  .link-box::placeholder {
+    color: var(--grey);
+    opacity: 0.9;
+    font-size: 10px;
+    font-weight: 500;
+    width: 155%;
+  }
+  #input-link {
+    padding-right: 186px;
+  }
+
+  .bnt {
+    position: absolute;
+    right: 10px;
+    top: 50%;
+    transform: translateY(-50%);
+    padding: 12px 26px;
+    border-radius: 25px;
+    background-color: var(--blue-vibrant);
+    border: 2px solid var(--blue-vibrant);
+    box-sizing: border-box;
+    cursor: pointer;
+    height: 51px;
+    width: 33.5%;
+    font-size: 14px;
+    letter-spacing: 0.19em;
+    line-height: 1.2;
+    font-weight: bold;
+    color: var(--white);
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.12);
+    transition: .3s;
+    z-index: 2;
+  }
+
+  .bnt:disabled {
+    background-color: #ccc;
+    cursor: not-allowed;
+    height: 50.5px;
+    width: 33.5%;
+    font-size: 12px;
+    border-radius: 25px;
+    color: var(--dark-grey);
+    border: 2px solid #999999;
+  }
+}
+
+/* Very small (≤360px) */
+@media (max-width: 360px) { 
+  .container-box {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+  }
+  #input-link {
+    padding-right: 20px;
+  }
+  .bnt {
+    position: static;
+    width: 100%;
+    transform: none;
+  }
 }
